[mips] Fix error condition check that always evaluates to false

Use proper logical operand when checking the value of srcid

PR:		200988
Submitted by:	David Binderman <dcb314@hotmail.com>
MFC after:	1 week


git-svn-id: svn+ssh://svn.freebsd.org/base/head@343452 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f